# cengine-3d

./: CMakeLists.txt  README.md  default.fs  default.vs  imgui.ini
assets/models/: cube.mtl  rock.mtl  scene.gltf
assets/shaders/: bloom.fs  bloom.vs  debug.fs  default.fs  default.vs  depth_debug.fs  grid.fs  grid.vs  gshader.fs  gshader.vs  hdr.fs  kawase.vs  kawase_downsample.fs  kawase_upsample.fs  light.fs  print.fs  shadow.fs  shadow.vs  unlit.fs  unlit.vs
libs/imgui/: imgui.cpp  imgui.h  imgui_internal.h
src/: main.cpp
src/assetmgr/: AssetManager.h
src/assetmgr/backends/opengl/: asset_manager_opengl.cpp
src/components/: Transform.h
src/core/: Ref.h  coordinate_system.cpp
src/editor/: editor.cpp  editor.h  editor_menu_bar.cpp  editor_menu_bar.h  editor_ppfx_inspector.cpp  editor_ppfx_inspector.h  entity_inspector.cpp  entity_inspector.h  scene_hierarchy.cpp  scene_hierarchy.h  system_explorer.cpp  tile_placer.cpp  viewport.cpp  viewport.h
src/editor/systems/: editor_systems.cpp
src/game/: constants.h  game.cpp  game.h
src/io/: cursor.h  filesystem.cpp  filesystem.h  keyboard.h
src/io/backends/opengl/: glfw_cursor.cpp  glfw_keyboard.cpp
src/render/: Camera.h  render.h  render_primitives.h
src/render/backends/opengl/: DirectionalLight.cpp  DirectonalLight.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.h  Texture.h  render_opengl.cpp
src/scene/: node.cpp  node.h
